--- a/app/src/main/res/layout/fragment_lesson.xml
+++ b/app/src/main/res/layout/fragment_lesson.xml
@@ -29,7 +29,7 @@
                 android:id="@+id/lesson_math_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                auto:engine="MathJax"
+                auto:engine="KaTeX"
                 auto:text="When \\(a \\ne 0\\), there are two solutions to \\(ax^2 + bx + c = 0\\)
         and they are $$x = {-b \\pm \\sqrt{b^2-4ac} \\over 2a}.$$"
                 >
