--- a/app/src/main/res/layout/fragment_question.xml
+++ b/app/src/main/res/layout/fragment_question.xml
@@ -18,10 +18,11 @@
             android:orientation="vertical">
 
             <TextView
-                style="?android:listSeparatorTextViewStyle"
                 android:id="@+id/question_status"
+                style="?android:listSeparatorTextViewStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
                 android:text="Question #"/>
 
             <io.github.kexanie.library.MathView
