All the front-end stuff

--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -14,11 +14,14 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <Button
+
+        <ImageButton
             android:id="@+id/play_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/play_button"/>
+            android:background="@null"
+            android:src="@mipmap/button_play" />
+
     </LinearLayout>
 
 </LinearLayout>
