--- a/app/src/main/res/layout/list_item_chapter.xml
+++ b/app/src/main/res/layout/list_item_chapter.xml
@@ -17,7 +17,10 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginStart="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:textSize="16sp"/>
+        android:textSize="20sp"
+        android:fontFamily="sans-serif-condensed"
+        android:gravity="center"
+        android:typeface="monospace"/>
 
     <RatingBar
         android:id="@+id/chapter_stars"
@@ -31,6 +34,9 @@
         app:layout_constraintTop_toTopOf="parent"
         style="@style/Widget.AppCompat.RatingBar.Indicator"
         android:numStars="3"
-        android:rating="3"/>
+        android:rating="3"
+        android:layout_below="@id/chapter_name"
+        android:orientation="vertical"
+        />
 
 </android.support.constraint.ConstraintLayout>
