--- a/app/src/main/res/layout/list_item_unit.xml
+++ b/app/src/main/res/layout/list_item_unit.xml
@@ -11,11 +11,17 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:textColor="@android:color/black"
-        android:textSize="18sp"/>
+        android:textSize="30sp"
+        android:fontFamily="sans-serif-condensed"
+        android:gravity="center"
+        android:typeface="monospace" />
 
     <TextView
         android:id="@+id/unit_chapter_count"
         android:layout_width="match_parent"
+        android:gravity="center"
         android:layout_height="wrap_content"/>
+
+
 
 </LinearLayout>
