Fixed the issue for linebreaking mathview
Added custom progress bar (not shown yet due to scaling problem that
takes forever to solve.)

--- a/app/src/main/res/layout/list_item_chapter.xml
+++ b/app/src/main/res/layout/list_item_chapter.xml
@@ -37,6 +37,10 @@
         android:rating="3"
         android:layout_below="@id/chapter_name"
         android:orientation="vertical"
+        android:shadowColor="#7000"
+        android:shadowDx="12"
+        android:shadowDy="12"
+        android:shadowRadius="8"
         />
 
 </android.support.constraint.ConstraintLayout>
