--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,4 +10,10 @@
         <item name="android:windowNoTitle">true</item>
     </style>
 
+    <style name="ratingBar" parent="@android:style/Widget.RatingBar">
+        <item name="android:progressDrawable">@drawable/ratingbar_custom</item>
+        <item name="android:minHeight">5dip</item>
+        <item name="android:maxHeight">15dip</item>
+    </style>
+
 </resources>
