--- a/app/src/main/res/layout/list_item_database.xml
+++ b/app/src/main/res/layout/list_item_database.xml
@@ -6,7 +6,7 @@
                                              android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/database_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
