--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -26,7 +26,7 @@
                 android:layout_height="wrap_content"/>
 
             <EditText
-                android:id="@+id/editText"
+                android:id="@+id/add_database_edit_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
