--- a/app/src/main/res/layout/list_item_progress.xml
+++ b/app/src/main/res/layout/list_item_progress.xml
@@ -6,7 +6,8 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:gravity="center"
-    tools:context="ca.sfu.g15.accelmath.MenuActivity">
+    android:background="@color/transparent_white"
+    tools:context="ca.sfu.g15.accelmath.ProgressActivity">
 
 
     <ProgressBar
