--- a/app/src/main/res/layout/fragment_main_menu.xml
+++ b/app/src/main/res/layout/fragment_main_menu.xml
@@ -9,17 +9,32 @@
         android:id="@+id/start_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:drawableRight="@drawable/ic_send_black_24dp"
+        android:padding="8dp"
+        android:layout_margin="8dp"
+        android:background="@color/main_button_color"
+        android:width="@dimen/main_button_width"
         android:text="@string/start"/>
 
     <Button
         android:id="@+id/progress_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:padding="8dp"
+        android:drawableRight="@drawable/ic_trending_up_black_24dp"
+        android:layout_margin="8dp"
+        android:background="@color/main_button_color"
+        android:width="@dimen/main_button_width"
         android:text="@string/progress"/>
 
     <Button
         android:id="@+id/settings_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:padding="8dp"
+        android:layout_margin="8dp"
+        android:drawableRight="@drawable/ic_settings_black_24dp"
+        android:background="@color/main_button_color"
+        android:width="@dimen/main_button_width"
         android:text="@string/settings"/>
 </LinearLayout>
