--- a/app/src/main/res/layout/list_item_chapter.xml
+++ b/app/src/main/res/layout/list_item_chapter.xml
@@ -5,42 +5,43 @@
                                              android:layout_width="match_parent"
                                              android:layout_height="wrap_content"
                                              android:layout_margin="8dp"
+                                             android:background="@color/transparent_white"
                                              android:orientation="vertical">
 
     <TextView
         android:id="@+id/chapter_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="16dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toTopOf="parent"
         android:layout_marginStart="16dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:textSize="20sp"
+        android:layout_marginTop="16dp"
         android:fontFamily="sans-serif-condensed"
         android:gravity="center"
-        android:typeface="monospace"/>
+        android:textSize="20sp"
+        android:typeface="monospace"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <RatingBar
         android:id="@+id/chapter_stars"
+        style="@style/Widget.AppCompat.RatingBar.Indicator"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="16dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toTopOf="parent"
-        style="@style/Widget.AppCompat.RatingBar.Indicator"
-        android:numStars="3"
-        android:rating="3"
         android:layout_below="@id/chapter_name"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="16dp"
+        android:numStars="3"
         android:orientation="vertical"
+        android:rating="3"
         android:shadowColor="#7000"
         android:shadowDx="12"
         android:shadowDy="12"
         android:shadowRadius="8"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         />
 
 </android.support.constraint.ConstraintLayout>
