--- a/app/src/main/res/layout/list_item_database.xml
+++ b/app/src/main/res/layout/list_item_database.xml
@@ -3,25 +3,31 @@
                                              xmlns:app="http://schemas.android.com/apk/res-auto"
                                              android:orientation="vertical"
                                              android:layout_width="match_parent"
-                                             android:layout_height="wrap_content">
+                                             android:layout_height="wrap_content"
+                                             android:background="@color/transparent_white"
+    android:layout_margin="8dp">
 
     <TextView
         android:id="@+id/database_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"/>
+        android:layout_marginTop="8dp"
+        android:text="TextView"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <Button
         android:id="@+id/select_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/select"
+        android:drawableRight="@drawable/ic_done_black_24dp"
+        android:padding="8dp"
+        android:background="@color/color_blue_button"
         app:layout_constraintRight_toLeftOf="@+id/delete_button"
         android:layout_marginRight="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -33,6 +39,9 @@
         android:id="@+id/delete_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:drawableRight="@drawable/ic_delete_black_24dp"
+        android:padding="8dp"
+        android:background="@color/color_red_button"
         android:text="@string/delete"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
