--- a/app/src/main/res/layout/list_item_unit.xml
+++ b/app/src/main/res/layout/list_item_unit.xml
@@ -3,25 +3,26 @@
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_margin="8dp"
-              android:orientation="vertical">
+              android:background="@color/transparent_white"
+              android:orientation="vertical"
+              android:padding="8dp">
 
     <TextView
         android:id="@+id/unit_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:textColor="@android:color/black"
-        android:textSize="30sp"
         android:fontFamily="sans-serif-condensed"
         android:gravity="center"
-        android:typeface="monospace" />
+        android:textColor="@android:color/black"
+        android:textSize="30sp"
+        android:typeface="monospace"/>
 
     <TextView
         android:id="@+id/unit_chapter_count"
         android:layout_width="match_parent"
-        android:gravity="center"
-        android:layout_height="wrap_content"/>
-
+        android:layout_height="wrap_content"
+        android:gravity="center"/>
 
 
 </LinearLayout>
