--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -20,14 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@null"
-            android:src="@mipmap/button_play" />
-
-        <ImageButton
-            android:id="@+id/quotes_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@null"
-            android:src="@mipmap/button_quotes" />
+            android:src="@mipmap/button_start" />
 
     </LinearLayout>
 
