--- a/app/src/main/res/layout/fragment_main_menu.xml
+++ b/app/src/main/res/layout/fragment_main_menu.xml
@@ -5,21 +5,35 @@
               android:gravity="center"
               android:orientation="vertical">
 
-    <Button
+    <ImageButton
         android:id="@+id/start_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/start"/>
+        android:src = "@mipmap/button_play2"
+        android:background="@null"
+        android:layout_margin="10dp"/>
 
-    <Button
+    <ImageButton
         android:id="@+id/progress_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/progress"/>
+        android:src = "@mipmap/button_progress"
+        android:background="@null"
+        android:layout_margin="10dp"/>
 
-    <Button
+    <ImageButton
         android:id="@+id/settings_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/settings"/>
+        android:src = "@mipmap/button_settings"
+        android:background="@null"
+        android:layout_margin="10dp"/>
+
+    <ImageButton
+        android:id="@+id/quotes_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src = "@mipmap/button_quotes2"
+        android:background="@null"
+        android:layout_margin="10dp"/>
 </LinearLayout>
