Added About Page
About Page includes:
Description,
Social Media
Github link

--- a/app/src/main/res/layout/fragment_main_menu.xml
+++ b/app/src/main/res/layout/fragment_main_menu.xml
@@ -48,4 +48,16 @@
         android:background="@color/main_button_color"
         android:width="@dimen/main_button_width"
         android:text="@string/quotes"/>
+
+    <Button
+        android:id="@+id/about_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="8dp"
+        android:layout_margin="8dp"
+        android:drawableRight="@drawable/ic_about"
+        android:background="@color/main_button_color"
+        android:width="@dimen/main_button_width"
+        android:text="@string/about"/>
+
 </LinearLayout>
