--- a/app/src/main/res/layout/fragment_main_menu.xml
+++ b/app/src/main/res/layout/fragment_main_menu.xml
@@ -39,6 +39,17 @@
         android:text="@string/settings"/>
 
     <Button
+        android:id="@+id/create_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:width="@dimen/main_button_width"
+        android:background="@color/main_button_color"
+        android:drawableRight="@drawable/ic_format_shapes_black_24dp"
+        android:padding="8dp"
+        android:text="@string/create"/>
+
+    <Button
         android:id="@+id/quotes_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
